Added content, images.

--- a/index.html
+++ b/index.html
@@ -5,4 +5,58 @@ title: home
 
 <img src="/assets/hero@2x.png" class="hero-image">
 
-<h1>daisy social.</h1>
+<center>
+<h1><span style="font-weight: 300;">social media today is an algorithmic hellscape designed to suck you in and keep you there.</span><br>what if it wasn't like that?</h1>
+</center>
+
+<div class="twocol-text">
+	<div class="para">
+		<div class="title notification">
+			Ding!
+		</div>
+		Another notification. Another mindless scroll session. Another hour sacrificed to the algorithm gods that seem to run our lives today.
+	
+		Social media today isn't built for <em>you</em>, it's built to keep you hooked. It's a trap. A cycle of non-stop low-effort zero-thinking decisions made by a black box about what you should watch, what you should be interested in, and how long you should stay there.
+	
+		But what if social media wasn't like that? What if it were a place where you could, you know, <strong>be social?</strong>	
+	</div>
+	
+	
+	
+	<div class="para">
+		<div class="title">
+			Meet Daisy.
+		</div>
+		No doomscrolling, no engagement traps or tricks, no rabbit hole black holes, no shady tracking, no studying users under a microscope. Just a space to post whatever's on your mind. Posts are short and sweet (150 characters), feeds are transparent, and content isn't controlled by a faceless algorithm. It's curated for you from information you provide or choose to provide<sup>a</sup>, not curated at you from information creepily extracted from how you behave.
+	</div>
+	
+	
+	
+	<div class="para">
+		<div class="title">
+			Daisy vs. *
+		</div>
+		Why should you switch?
+		<ul>
+			<li><b>feeds that actually make sense</b> — chronological, niche-based, location-aware<sup>a</sup> feeds, not just what gets the most clicks.</li>
+			<li><b>bloom</b> — because great posts shouldn't be hidden beneath influencer noise.</li>
+			<li><b>stickies</b> — ephemeral, interactive, supremely fun.</li>
+			<li><b>zero tracking</b> — no creepy data collection, just niche-based content discovery.</li>
+			<li><b>developer friendly</b> — because good bots and 3rd party apps make the internet better.</li>
+		</ul>
+	</div>
+</div>
+
+<div style="margin-top: 30px">
+	<center>Daisy won't track you, won't sell your data, and won't trap you in an endless loop of "one more scroll." Just a fun, colorful, human space on the internet.<br><strong>And when you’ve had enough for the day, we'll even remind you to log off.</strong></center>
+</div>
+
+
+<div style="margin-top: 30px">
+	<center><strong>Join the waitlist now.</strong><br>No spam and no tracking. Promise.</center>
+</div>
+
+
+<div style="opacity:0.5;font-size:0.5em;margin-top:50px;">
+	<sup>a</sup>Niches for content discovery are automatically inferred from public posts you make, unless you choose to opt out. Don't worry, we'll make that easy for you — no dark patterns or emotional warfare, just a checkbox.
+</div>
