--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: home
 		</div>
 		Why should you switch?
 		<ul>
-			<li><b>feeds that actually make sense</b> — chronological, niche-based, location-aware<sup>a</sup> feeds, not just what gets the most clicks.</li>
+			<li><b>feeds that actually make sense</b> — chronological, niche-based, location-aware<sup>b</sup> feeds, not just what gets the most clicks.</li>
 			<li><b>bloom</b> — because great posts shouldn't be hidden beneath influencer noise.</li>
 			<li><b>stickies</b> — ephemeral, interactive, supremely fun.</li>
 			<li><b>zero tracking</b> — no creepy data collection, just niche-based content discovery.</li>
@@ -48,15 +48,20 @@ title: home
 </div>
 
 <div style="margin-top: 30px">
-	<center>Daisy won't track you, won't sell your data, and won't trap you in an endless loop of "one more scroll." Just a fun, colorful, human space on the internet.<br><strong>And when you’ve had enough for the day, we'll even remind you to log off.</strong></center>
+	<center>Daisy won't track you, won't sell your data, and won't trap you in an endless loop of "one more scroll." Just a fun, colorful, human space on the internet.<br><strong>And when you’ve had enough for the day, Daisy will even remind you to log off.</strong></center>
 </div>
 
 
 <div style="margin-top: 30px">
-	<center><strong>Join the waitlist now.</strong><br>No spam and no tracking. Promise.</center>
+	<center>
+		<strong>Join the waitlist now, and you'll be invited to join the beta program.</strong><br>No spam and no tracking. Promise.
+		
+		<a class="register-link" href="https://tally.so/r/nPkGW1" target="_blank">join the waitlist</a>
+	</center>
 </div>
 
 
 <div style="opacity:0.5;font-size:0.5em;margin-top:50px;">
-	<sup>a</sup>Niches for content discovery are automatically inferred from public posts you make, unless you choose to opt out. Don't worry, we'll make that easy for you — no dark patterns or emotional warfare, just a checkbox.
+	<sup>a</sup>Niches for content discovery are automatically inferred from public posts you make, unless you choose to opt out. Don't worry, we'll make that easy for you — no dark patterns or emotional warfare, just a checkbox.<br>
+	<sup>b</sup>Location and other required information is taken from user-provided responses to explicitly stated questions. No creepy tracking.
 </div>
